# world-info

./: .flaskenv  .gitignore  README.md  app.db  compile.cmd  config.py  package-lock.json  pyproject.toml  tsconfig.json  worldinfo-server.py
app/: __init__.py  forms.py  models.py  routes.py  utils.py
app/auth/: __init__.py  routes.py
app/errors/: __init__.py
app/static/js/: block_selector.js
app/static/textures/block/: files.txt
app/templates/: _create_project.html  _create_world.html  _delete_project.html  base.html  block_selector.html  home.html  index.html  login.html  project.html  register.html  user.html  world.html
app/templates/auth/: login.html
app/templates/errors/: 404.html  500.html
core/: project.py  worldinfo.py
migrations/versions/: 03a54cc63348_.py  2b2b6666f3ae_.py  2bb411b40dcf_.py  33ddf69aa958_posts_table.py  4a5c77533303_.py  516cd86f85d8_.py  539d7f5a2474_added_project_description.py  74222e25b142_users_table.py  ca80c3d942bc_.py  ceef39108c7b_.py  e9fee7917a3e_.py  f23c15d7883b_users_table.py  f6d3cb7e48e6_.py
